clean up and update

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ playground
 relations
 code/data/gender_data.csv
 code/data/relation_data.csv
+.conda
+code/ms-thesis
+code/.venv
+code/functions/__*
